<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginBottom="40dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginHorizontal="10dp"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_marginBottom="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/baseline_email"
                    android:lines="1"
                    android:drawablePadding="10dp"
                    android:background="@drawable/edit_text_login"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_text_login"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginHorizontal="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:passwordToggleEnabled="true"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/baseline_lock"
                    android:lines="1"
                    android:drawablePadding="10dp"
                    android:maxLength="16"
                    android:background="@drawable/edit_text_login"
                    android:inputType="textEmailAddress"
                    android:hint="@string/edit_text_password"/>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_authorization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_authorization_selector"
                android:text="@string/button_authorization"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/registration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_text_login"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="60dp"
                android:layout_gravity="center"/>


    </LinearLayout>
